fixed post-content title and paragraph spacing

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -221,7 +221,8 @@ li {
   }
 
   h1 {
-    font-weight: bold;  
+    font-weight: bold;
+    margin-bottom: 50px;
     @media screen and (min-width: $on-large) {
       @include relative-font-size(3.5);
     }
@@ -277,7 +278,7 @@ li {
   color: $brand-color;
   width: 17.5%;
   margin-left: -35px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   padding: 5px 15px 5px 0px;
   text-align: right;
   font-weight: 400;
